samples/_failures_safe/1761371892_241423_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_247f4be1.c: In function ‘runAlgorithm’:
./samples/SAFE/__tmp_247f4be1.c:155:13: error: expected declaration or statement at end of input
  155 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_247f4be1.c:155:13: error: expected declaration or statement at end of input
